--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blog</title>
+    <title>My Blog</title>
     <link rel="stylesheet" type="text/css" href="main.css" />       
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet"> 
   </head>
   <body>
         
